# rtt-semihosting-test

./: Cargo.toml  memory.x
.cargo/: config.toml
src/: main.rs
